# mad-test

./: .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini
mad/: asgi.py  settings.py  urls.py  wsgi.py
mad/app/: apps.py  backends.py  exceptions.py  models.py  repositories.py  serializers.py  services.py  urls.py  views.py
mad/app/migrations/: 0001_initial.py
mad/app/tests/: asserts.py  factories.py  test_api.py
